# dsgbr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: check-links.yaml  ci.yml  docs.yaml  release.yml  update-pre-commits.yaml
docs/: algorithm.md
dsgbr/: DSGBR.md  DSGBR.py  DSGBR_test.py  __init__.py  inspection.py
examples/: basic_usage.py  parameter_tuning.py  visualization.py
src/dsgbr/: DSGBR.py  __init__.py  _compat.py  _config.py  _detector.py  _selection.py
tests/: conftest.py  test_compat.py  test_config.py  test_coverage_gaps.py  test_detector.py  test_dsgbr_package.py  test_edge_cases.py  test_integration.py  test_selection.py
