[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsgbr"
version = "0.1.0"
description = "Dual Savitzky–Golay Baseline Ratio (DSGBR) spectral peak detector"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
authors = [{ name = "Ricardo Frantz" }]
maintainers = [{ name = "Ricardo Frantz" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]
keywords = [
    "spectral-analysis",
    "peak-detection",
    "signal-processing",
    "fluid-dynamics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.7",
    "SciencePlots>=2.0",
]
tests = [
    "coverage[toml]>=7.5.3",
    "pytest-cov>=5.0.0",
    "pytest>=8.2.2",
]
tests-extra = [
    "pytest-randomly==4.0.1",
    "pytest-rerunfailures==16.1",
    "pytest-xdist==3.8.0",
]
qa = [
    "codespell>=2.4.1",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "ruff>=0.7.0",
]
dev = [
    "build",
    "coverage[toml]>=7.5.3",
    "codespell>=2.4.1",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-randomly==4.0.1",
    "pytest-rerunfailures==16.1",
    "pytest-xdist==3.8.0",
    "ruff>=0.7.0",
    "twine",
]

[project.urls]
Homepage = "https://github.com/ricardofrantz/JFM_CS"
Source = "https://github.com/ricardofrantz/JFM_CS"
Tracker = "https://github.com/ricardofrantz/JFM_CS/issues"
Documentation = "https://github.com/ricardofrantz/JFM_CS#readme"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "dsgbr*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["docs/conf.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["E402"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
python_version = "3.10"
exclude = ["docs/conf.py"]

[tool.codespell]
skip = "docs/conf.py"
check-filenames = true

[tool.coverage.run]
branch = true
relative_files = true
source = ["core", "dsgbr", "tests"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
