[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsgbr"
version = "0.1.1"
description = "Dual Savitzky–Golay Baseline Ratio (DSGBR) spectral peak detector"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Ricardo Frantz" }]
maintainers = [{ name = "Ricardo Frantz" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]
keywords = [
    "spectral-analysis",
    "peak-detection",
    "signal-processing",
    "savitzky-golay",
    "power-spectral-density",
    "fluid-dynamics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.7",
]
tests = [
    "coverage[toml]>=7.5.3",
    "pytest-cov>=5.0.0",
    "pytest>=8.2.2",
]
tests-extra = [
    "pytest-randomly==3.16.0",
    "pytest-rerunfailures==15.1",
    "pytest-xdist==3.8.0",
]
qa = [
    "codespell>=2.4.1",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "ruff>=0.7.0",
]
dev = [
    "build",
    "coverage[toml]>=7.5.3",
    "codespell>=2.4.1",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-randomly==3.16.0",
    "pytest-rerunfailures==15.1",
    "pytest-xdist==3.8.0",
    "ruff>=0.7.0",
    "twine",
]

[project.urls]
Homepage = "https://github.com/ricardofrantz/dsgbr"
Source = "https://github.com/ricardofrantz/dsgbr"
Tracker = "https://github.com/ricardofrantz/dsgbr/issues"
Documentation = "https://github.com/ricardofrantz/dsgbr#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["docs/conf.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "D"]
ignore = ["E501", "D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D"]
"examples/*" = ["D"]

[tool.mypy]
pretty = true
strict = true
python_version = "3.10"
exclude = ["docs/conf.py", "tests/", "examples/"]

[tool.codespell]
skip = "docs/conf.py"
check-filenames = true

[tool.coverage.run]
branch = true
relative_files = true
source = ["dsgbr"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
